Add authentication using API-Key header
